maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: value &&! is not a member of Boolean
    if( y>0 &&!aMurNord(x,y-1)){indic(x,y+1,i+1)}
            ^